; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_shader.c_menu_shader_get.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_shader.c_menu_shader_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.video_shader = type { i32 }

@menu_driver_shader = common dso_local global %struct.video_shader* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.video_shader* @menu_shader_get() #0 {
  %1 = alloca %struct.video_shader*, align 8
  %2 = call i64 (...) @video_shader_any_supported()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load %struct.video_shader*, %struct.video_shader** @menu_driver_shader, align 8
  store %struct.video_shader* %5, %struct.video_shader** %1, align 8
  br label %7

6:                                                ; preds = %0
  store %struct.video_shader* null, %struct.video_shader** %1, align 8
  br label %7

7:                                                ; preds = %6, %4
  %8 = load %struct.video_shader*, %struct.video_shader** %1, align 8
  ret %struct.video_shader* %8
}

declare dso_local i64 @video_shader_any_supported(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
